--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ server.port=8080
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+#Database
 spring.datasource.url=jdbc:postgresql://localhost:5432/warehouse
 spring.datasource.username=postgres
 spring.datasource.password=postgres
@@ -11,3 +12,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.open-in-view = true
 
+# For swagger2config
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
